Array class -> List.class (modified for shorter implementations)